--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,3 +3,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    @apply w-1.5 h-1.5
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-gray-100
+}
+
+::-webkit-scrollbar-thumb {
+    @apply bg-financialwire-purple hover:bg-financialwire-purple/90 transition-all ease-in-out
+}
